theme color changed

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title> RaJat</title>
     <meta content="width=device-width, initial-scale=1" name="viewport">
-    <meta name="theme-color" content="#1bbc9b" />
+    <meta name="theme-color" content="#6804a1be" />
     <link href="assets/css/main.css" rel="stylesheet">
 </head>
 
