--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="theme-color" content="#6804a1be" />
     <link href="assets/css/main.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+        integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 </head>
 
 <body>
@@ -17,6 +19,21 @@
             <h3> I am learning full stack web development. Watch this space for my upcoming projects</h3>
         </div>
     </header>
+
+    <div class="jumbotron">
+        <a class="link" href="#">
+            <i class="fab fa-linkedin"></i>
+        </a>
+        <a class="link" href="#">
+            <i class="fab fa-github"></i>
+        </a>
+        <a class="link" href="#">
+            <i class="fab fa-instagram"></i>
+        </a>
+        <a class="link" href="#">
+            <i class="fab fa-gitlab"></i>
+        </a>
+    </div>
 </body>
 
 </html>
