--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <a class="link" href="#">
             <i class="fab fa-linkedin"></i>
         </a>
-        <a class="link" href="#">
+        <a class="link" href="https://github.com/Rajat1999">
             <i class="fab fa-github"></i>
         </a>
         <a class="link" href="#">
