--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <a class="link" href="#">
             <i class="fab fa-instagram"></i>
         </a>
-        <a class="link" href="#">
+        <a class="link" href="https://gitlab.com/Rajat1999">
             <i class="fab fa-gitlab"></i>
         </a>
     </div>
