LinkedIn link added

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </header>
 
     <div class="jumbotron">
-        <a class="link" href="#">
+        <a class="link" href="https://www.linkedin.com/in/rajat-gour/">
             <i class="fab fa-linkedin"></i>
         </a>
         <a class="link" href="https://github.com/Rajat1999">
