Instagram link added

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <a class="link" href="https://github.com/Rajat1999">
             <i class="fab fa-github"></i>
         </a>
-        <a class="link" href="#">
+        <a class="link" href="https://www.instagram.com/rajatgour95/?hl=en">
             <i class="fab fa-instagram"></i>
         </a>
         <a class="link" href="https://gitlab.com/Rajat1999">
