--- a/index.html
+++ b/index.html
@@ -12,15 +12,31 @@
 
 <body>
     <header class="site-header">
-        <img class="profile-pic"
-            src="assets/images/profile.jpg">
-        <div class="site-header-content">
-            <h1>Hi, I am Rajat, I am 19 years old, living in New Delhi, India</h1>
-            <h3> I am learning full stack web development. Watch this space for my upcoming projects</h3>
+        <div class="box">
+            <div class="content">
+                <div>
+                    <h3>Random hover effect</h3>
+                    <hr>
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                        Ut officia soluta vero, doloremque repellendus quia ad?
+                        Tempore velit deserunt consectetur nemo! Ut expedita mollitia enim impedit a harum?
+                        Praesentium, error.
+                    </p>
+                    <a href="#">Read More</a>
+                </div>
+            </div>
+            <img class="profile-pic" src="assets/images/profile.jpg">
+        </div>
+        <div class="jumbotron">
+            <div class="site-header-content">
+                <h1>Hi, I am Rajat, I am 19 years old, living in New Delhi, India</h1>
+                <h3> I am learning full stack web development. Watch this space for my upcoming projects</h3>
+            </div> 
         </div>
     </header>
 
-    <div class="jumbotron">
+    <div class="footer">
         <a class="link" href="https://www.linkedin.com/in/rajat-gour/">
             <i class="fab fa-linkedin"></i>
         </a>
