--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     </a>
                 </div>
             </div>
-            <img class="profile-pic" src="assets/images/profile.svg">
+            <img class="profile-pic" src="assets/images/profile.jpg">
         </div>
 
 
