--- a/index.html
+++ b/index.html
@@ -87,6 +87,10 @@
                 <i class="fab fa-gitlab"></i>
             </a>
         </div> -->
+    
+    <script>
+          alert('This site is not responsive right now, please try opening it on desktop!');
+    </script>
 </body>
 
 </html>
