--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         </div> -->
     
     <script>
-          alert('This site is not responsive right now, please try opening it on desktop!');
+          alert('This site is not responsive for mobile friendly environment right now, please try opening it on desktop! Use Chrome browser for best experience!!');
     </script>
 </body>
 
