--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <!-- <img src="/assets/images/greenTri.svg" id="green">
     <img src="/assets/images/blueTri.svg" id="blue">     -->
 
-        <div class="box">
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="box">
             <div class="content">
                 <div>
                     <h3>Connect with me :</h3>
@@ -87,6 +89,8 @@
                 <i class="fab fa-gitlab"></i>
             </a>
         </div> -->
+        </div>
+    </div>
     
     <script>
           alert('This site is not responsive for mobile friendly environment right now, please try opening it on desktop! Use Chrome browser for best experience!!');
