--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <div class="row">
                         <div class="col-lg-12">
                             <div class="img-container">
-                                <img class="profile-pic" src="assets/images/profile.jpg">
+                                <img class="profile-pic" src="assets/images/profile.jpg" alt="My profile pic">
                             </div>
                         </div>
                     </div>
