--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title> RaJat</title>
     <meta content="width=device-width, initial-scale=1" name="viewport">
-    <meta name="theme-color" content="#2083FF" />
+    <meta name="theme-color" content="#2C3A47" />
     <link href="assets/css/main.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
