--- a/index.html
+++ b/index.html
@@ -13,13 +13,39 @@
 <body>
     
     
-            <div class="box">
+            <div id="box1">
                 <div class="container container-fluid">
                     <div class="row">
                         <div class="col-lg-12">
                             <div class="img-container">
                                 <img class="profile-pic" src="assets/images/profile.jpg" alt="My profile pic">
                             </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div id="box2">
+                <div class="container container-fluid">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <ul>
+                                <li>
+                                    <div class="link-container">
+                                        <a href="#">ABOUT ME</a>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="link-container">
+                                        <a href="#">CONNECT</a>
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="link-container">
+                                        <a href="#">OTHER STUFF</a>
+                                    </div>
+                                </li>
+                            </ul>
                         </div>
                     </div>
                 </div>
