--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
                                 <li>
                                     <div class="link-container">
                                         <a href="#">CONNECT</a>
+                                        <div class="dropdown-content">
+                                            <a href="#"><i class="fab fa-github"></i></a>
+                                            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                                            <a href="#"><i class="fab fa-instagram"></i></a>
+                                        </div>
                                     </div>
                                 </li>
                                 <li>
