--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <title> RaJat</title>
     <meta content="width=device-width, initial-scale=1" name="viewport">
-    <meta name="theme-color" content="#2C3A47" />
+    <meta name="theme-color" content="#2C3A47"/>
     <link href="assets/css/main.css" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
         integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
@@ -31,24 +32,23 @@
                         <div class="col-lg-12">
                             <ul>
                                 <li>
-                                    <div class="link-container">
-                                        <a href="#">ABOUT ME</a>
-                                    </div>
+                                    <a href="https://www.google.com">
+                                        <button class="show-btn"><i class="fas fa-user"></i> <span>About me</span></button>
+                                    </a>
                                 </li>
                                 <li>
-                                    <div class="link-container">
-                                        <a href="#">CONNECT</a>
-                                        <div class="dropdown-content">
-                                            <a href="#"><i class="fab fa-github"></i></a>
-                                            <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                                            <a href="#"><i class="fab fa-instagram"></i></a>
+                                    <button><i class="fas fa-link"></i> <span>Connect</span></button>
+                                        <div class="sm-menu">
+                                            <a href="#"><i class="fas fa-link"></i></a>
+                                            <a href="#"><i class="fas fa-link"></i></a>
+                                            <a href="#"><i class="fas fa-link"></i></a>
+                                            <a href="#"><i class="fas fa-link"></i></a>
                                         </div>
-                                    </div>
                                 </li>
                                 <li>
-                                    <div class="link-container">
-                                        <a href="#">OTHER STUFF</a>
-                                    </div>
+                                    <a href="https://www.google.com">
+                                        <button><i class="fas fa-code-branch"></i> <span>Projects</span></button>
+                                    </a>
                                 </li>
                             </ul>
                         </div>
@@ -58,9 +58,7 @@
                 
 
     
-    <!-- <script>
-          alert('This site is not responsive for mobile friendly environment right now, please try opening it on desktop! Use Chrome browser for best experience!!');
-    </script> -->
+    <script src="assets/js/main.js"></script>
 </body>
 
 </html>
