--- a/index.html
+++ b/index.html
@@ -32,23 +32,23 @@
                         <div class="col-lg-12">
                             <ul>
                                 <li>
-                                    <a href="https://www.google.com">
+                                    <a href="assets/html/about.html">
                                         <button class="show-btn"><i class="fas fa-user"></i> <span>About me</span></button>
                                     </a>
-                                </li>
-                                <li>
-                                    <button><i class="fas fa-link"></i> <span>Connect</span></button>
-                                        <div class="sm-menu">
-                                            <a href="#"><i class="fas fa-link"></i></a>
-                                            <a href="#"><i class="fas fa-link"></i></a>
-                                            <a href="#"><i class="fas fa-link"></i></a>
-                                            <a href="#"><i class="fas fa-link"></i></a>
-                                        </div>
                                 </li>
                                 <li>
                                     <a href="https://www.google.com">
                                         <button><i class="fas fa-code-branch"></i> <span>Projects</span></button>
                                     </a>
+                                </li>
+                                <li>
+                                    <button><i class="fas fa-link"></i> <span>Connect</span></button>
+                                    <div class="sm-menu">
+                                        <a href="#"><i class="fas fa-link"></i></a>
+                                        <a href="#"><i class="fas fa-link"></i></a>
+                                        <a href="#"><i class="fas fa-link"></i></a>
+                                        <a href="#"><i class="fas fa-link"></i></a>
+                                    </div>
                                 </li>
                             </ul>
                         </div>
