adding more pages

--- a/index.html
+++ b/index.html
@@ -33,16 +33,16 @@
                             <ul>
                                 <li>
                                     <a href="assets/html/about.html">
-                                        <button class="show-btn"><i class="fas fa-user"></i> <span>About me</span></button>
+                                        <button class="show-btn"><i class="fas fa-user"></i> <span>About me</span> <i class="fas fa-long-arrow-alt-right"></i></button>
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="https://www.google.com">
-                                        <button><i class="fas fa-code-branch"></i> <span>Projects</span></button>
+                                    <a href="#">
+                                        <button><i class="fas fa-code-branch"></i> <span>Projects</span> <i class="fas fa-long-arrow-alt-right"></i></button>
                                     </a>
                                 </li>
                                 <li>
-                                    <button><i class="fas fa-link"></i> <span>Connect</span></button>
+                                    <button><i class="fas fa-link"></i> <span>Connect</span> <i class="fas fa-long-arrow-alt-right"></i></button>
                                     <div class="sm-menu">
                                         <a href="#"><i class="fas fa-link"></i></a>
                                         <a href="#"><i class="fas fa-link"></i></a>
