--- a/assets/html/about.html
+++ b/assets/html/about.html
@@ -9,12 +9,23 @@
     <title>About Rajat</title>
 </head>
 <body>
-    <div class="box1">
+    <div id="box1">
         <div class="container container-fluid">
             <div class="row">
                 <div class="col-lg-12">
-                    <div class="bg">
+                    <div class="bg"></div>
+                    <div class="about">
                         <h2>About me</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Veritatis non sint, amet reprehenderit dolorum nesciunt dolor voluptate ut cum dolores!
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Veritatis non sint, amet reprehenderit dolorum nesciunt dolor voluptate ut cum dolores!
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Veritatis non sint, amet reprehenderit dolorum nesciunt dolor voluptate ut cum dolores!
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Veritatis non sint, amet reprehenderit dolorum nesciunt dolor voluptate ut cum dolores!
+                        </p>
                     </div>
                 </div>
             </div>
