--- a/assets/html/about.html
+++ b/assets/html/about.html
@@ -9,6 +9,19 @@
     <title>About Rajat</title>
 </head>
 <body>
+
+    <div id="box2">
+        <div class="container container-fluid">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="row">
+                        <img src="../images/RAJAT.png" alt="Rajat">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div id="box1">
         <div class="container container-fluid">
             <div class="row">
