adding new things

--- a/index.html
+++ b/index.html
@@ -33,22 +33,25 @@
                             <ul>
                                 <li>
                                     <a href="assets/html/about.html">
-                                        <button class="show-btn"><i class="fas fa-user"></i> <span>About me</span> <i class="fas fa-long-arrow-alt-right"></i></button>
+                                        <button class="show-btn"><i class="fas fa-user"></i> <span>About me</span></button>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#">
-                                        <button><i class="fas fa-code-branch"></i> <span>Projects</span> <i class="fas fa-long-arrow-alt-right"></i></button>
+                                        <button><i class="fas fa-code-branch"></i> <span>Projects</span></button>
                                     </a>
                                 </li>
                                 <li>
-                                    <button><i class="fas fa-link"></i> <span>Connect</span> <i class="fas fa-long-arrow-alt-right"></i></button>
-                                    <div class="sm-menu">
-                                        <a href="#"><i class="fas fa-link"></i></a>
-                                        <a href="#"><i class="fas fa-link"></i></a>
-                                        <a href="#"><i class="fas fa-link"></i></a>
-                                        <a href="#"><i class="fas fa-link"></i></a>
-                                    </div>
+                                    <button><i class="fas fa-link"></i> <span>Connect</span></button>
+                                        <div class="nav">
+                                            <input type="checkbox" name="checkbox" id="checkbox">
+                                            <span></span>
+                                            <span></span>
+                                            <div class="menu">
+                                                <li><a href="#">Github</a></li>
+                                                <li><a href="#">LinkedIn</a></li>
+                                            </div>
+                                        </div>
                                 </li>
                             </ul>
                         </div>
