--- a/assets/html/about.html
+++ b/assets/html/about.html
@@ -11,25 +11,43 @@
 </head>
 <body>
 
-    <div id="box2">
-
+    <div id="box1">
+        <div class="container container-fluid">
             <div class="row">
                 <div class="col-lg-12">
-                    <div class="row">
-                        <img src="../images/RAJAT.png" alt="Rajat">
-                    </div>
+                    <img src="../images/RAJAT.png" alt="Rajat">
                 </div>
             </div>
-
+        </div>
     </div>
 
-    <div id="box1">
+    <div id="box2">
         <div class="container container-fluid">
             <div class="row">
                 <div class="col-lg-12">
                     <div class="bg"></div>
                     <div class="about">
                         <h2>About me</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Veritatis non sint, amet reprehenderit dolorum nesciunt dolor voluptate ut cum dolores!
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Veritatis non sint, amet reprehenderit dolorum nesciunt dolor voluptate ut cum dolores!
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Veritatis non sint, amet reprehenderit dolorum nesciunt dolor voluptate ut cum dolores!
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Veritatis non sint, amet reprehenderit dolorum nesciunt dolor voluptate ut cum dolores!
+                        </p>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Veritatis non sint, amet reprehenderit dolorum nesciunt dolor voluptate ut cum dolores!
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Veritatis non sint, amet reprehenderit dolorum nesciunt dolor voluptate ut cum dolores!
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Veritatis non sint, amet reprehenderit dolorum nesciunt dolor voluptate ut cum dolores!
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Veritatis non sint, amet reprehenderit dolorum nesciunt dolor voluptate ut cum dolores!
+                        </p>
                         <p>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit.
                             Veritatis non sint, amet reprehenderit dolorum nesciunt dolor voluptate ut cum dolores!
