--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <button><i class="fas fa-link"></i> <span>Connect</span></button>
+                                    <a href="#">
+                                        <button><i class="fas fa-link"></i> <span>Connect</span></button>
+                                    </a>
                                 </li>
                             </ul>
                         </div>
