--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title> RaJat</title>
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <meta name="theme-color" content="#2C3A47"/>
-    <link rel='icon' href='favicon.ico' type='image/x-icon'/>
+    <link rel='icon' href='assets/images/favicon.ico' type='image/x-icon'/>
     <link href="assets/css/main.css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
