about section updated

--- a/index.html
+++ b/index.html
@@ -49,16 +49,19 @@
             <h1>Who is Rajat?</h1>
         </div>
         <div class="content" id="aboutContent">
-            <h1><span class="pipe">Hello,</span></h1>
-            <h4>Is it me you're looking for <span class="pipe">?</span></h3>
-                <p>
-                    I'm a <span class="yellow">Delhi</span> based web developer, and UI/UX designer.
+            <div class="bio">
+                <h1><span class="pipe">Hello,</span></h1>
+                <h4>Is it me you're looking for <span class="pipe">?</span></h3>
                     <br>
-                    Currently pursuing B.tech in Information Technology from <a href="http://www.msit.in" class="yellow"
-                        title="Maharaja Surajmal Institute of Technology">MSIT</a>-IPU, Delhi.
-                    <br>
-                    I started web development last year. I'm a MERN-stack developer now!
-                </p>
+                    <p>
+                        I'm a <span class="yellow">Delhi</span> based web developer, and UI/UX designer.
+                        <br>
+                        Currently pursuing B.tech in Information Technology from <a href="http://www.msit.in"
+                            class="yellow" title="Maharaja Surajmal Institute of Technology">MSIT</a>-IPU.
+                        <br>
+                        I started web development last year. I'm a <span class="yellow">MERN-stack</span> developer now!
+                    </p>
+            </div>
         </div>
     </div>
 
