--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
     <link rel="stylesheet" href="assets/css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Livvic|Nanum+Pen+Script|Sacramento|Satisfy&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.10.2/css/all.css"
-        integrity="sha384-rtJEYb85SiYWgfpCr0jn174XgJTn4rptSOQsMroFBPQSGLdOC5IbubP6lJ35qoM9" crossorigin="anonymous">
-    <!-- <link rel="stylesheet" href="bootstrap.min.css"> -->
+    <script src="https://kit.fontawesome.com/4b3d8f449d.js"></script>
+        <!-- <link rel="stylesheet" href="bootstrap.min.css"> -->
     <title>RaJaT</title>
 </head>
 
@@ -58,11 +57,20 @@
                         <br>
                         Currently pursuing B.tech in Information Technology from <a href="http://www.msit.in"
                             class="yellow" title="Maharaja Surajmal Institute of Technology">MSIT</a>-IPU.
-                        <br>
-                        I started web development last year. I'm a <span class="yellow">MERN-stack</span> developer now!
-                    </p>
+                        <br><br>
+                        I started learning web development in 2018. I'm a <span class="yellow">MERN-stack</span> developer now!
+                        <br><br>
+                        Apart from coding I like sketching, it is one of my hobbies which include listening dubsteps and playing ping-pong.
+                        If you haven't seen me for a while, I would probably be listening Dubsteps in a corner of my room! 
+                        I also like clicking random pictures through my phone, 
+                        if you like you can check them out <a href="#" class="yellow">here</a>.
+                    </p> 
             </div>
         </div>
+    </div>
+
+    <div class="project">
+        
     </div>
 
     <script src="assets/js/main.js"></script>
