--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="content" id="aboutContent">
             <div class="bio">
                 <h1><span class="pipe">Hello,</span></h1>
-                <h4>Is it me you're looking for <span class="pipe">?</span></h3>
+                <h3>Is it me you're looking for <span class="pipe">?</span></h3>
                     <br>
                     <p>
                         I'm a <span class="yellow">Delhi</span> based web developer, and UI/UX designer.
@@ -60,8 +60,8 @@
                         <br><br>
                         I started learning web development in 2018. I'm a <span class="yellow">MERN-stack</span> developer now!
                         <br><br>
-                        Apart from coding I like sketching, it is one of my hobbies which include listening dubsteps and playing ping-pong.
-                        If you haven't seen me for a while, I would probably be listening Dubsteps in a corner of my room! 
+                        Apart from coding I like sketching, listening dubsteps and playing ping-pong.
+                        If you haven't heard from me lately, I would probably be listening Dubsteps in a corner of my room! 
                         I also like clicking random pictures through my phone, 
                         if you like you can check them out <a href="#" class="yellow">here</a>.
                     </p> 
