--- a/index.html
+++ b/index.html
@@ -53,17 +53,20 @@
                 <h3>Is it me you're looking for <span class="pipe">?</span></h3>
                     <br>
                     <p>
-                        I'm a <span class="yellow">Delhi</span> based web developer, and UI/UX designer.
+                        I'm a <span class="yellow">Delhi</span> based Web developer, and UI/UX designer.
                         <br>
-                        Currently pursuing B.tech in Information Technology from <a href="http://www.msit.in"
+                        I'm currently doing my B.tech in Information Technology from <a href="http://www.msit.in"
                             class="yellow" title="Maharaja Surajmal Institute of Technology">MSIT</a>-IPU.
                         <br><br>
-                        I started learning web development in 2018. I'm a <span class="yellow">MERN-stack</span> developer now!
+                        I started learning web development in 2018. And I'm a <span class="yellow">Node.js</span> developer
+                        now! Well, I'm more into <span class="yellow">front-end</span> related stuff though.
                         <br><br>
-                        Apart from coding I like sketching, listening dubsteps and playing ping-pong.
-                        If you haven't heard from me lately, I would probably be listening Dubsteps in a corner of my room! 
-                        I also like clicking random pictures through my phone, 
-                        if you like you can check them out <a href="#" class="yellow">here</a>.
+                         Apart from coding, I like designing things, usually UI and UX for some dummy apps or websites.
+                        I love watching movies too. My hobbies include sketching and listening to dubstep. I also like
+                        clicking random pictures from my phone, if you like you can check them out <a href="#"
+                            class="yellow">here</a>.
+                        <br><br>
+                        If you have any cool projects or opportunities, <a href="#" class="yellow">get in touch</a>!
                     </p> 
             </div>
         </div>
