--- a/index.html
+++ b/index.html
@@ -33,7 +33,11 @@
 
     <div class="info">
         <h2> Hi you found me! I'm just a random guy constantly staring at my glasses! <br> And apart from that I like
-            doing web development and designing stuff. </h2>
+            doing web development and designing. </h2>
+    </div>
+
+    <div class="arrow">
+        <a href="#aboutContent"><img src="assets/svgs/down-arrow.svg" alt="down" title="Explore below!"></a>
     </div>
 
     <div class="skillset">
@@ -56,14 +60,14 @@
                         I'm a <span class="yellow">Delhi</span> based Web developer, and UI/UX designer.
                         <br>
                         I'm currently doing my B.tech in Information Technology from <a href="http://www.msit.in"
-                            class="yellow" title="Maharaja Surajmal Institute of Technology">MSIT</a>-IPU.
+                            class="yellow" title="Maharaja Surajmal Institute of Technology">MSIT</a>.
                         <br>
                         I started learning web development in 2018. And I'm a <span class="yellow">Node.js</span> developer
-                        now! Well, I'm more into <span class="yellow">front-end</span> related stuff though.
+                        now! Though, I'm more into <span class="yellow">UI</span> and <span class="yellow">Front-end</span> related stuff. So I recently started designing.
                         <br>
-                         Apart from coding, I like designing things, usually UI and UX for some dummy apps or websites.
+                         Apart from coding, I like designing UI and UX for dummy apps or websites.
                         I love watching movies too. My hobbies include sketching and listening to dubstep. I also like
-                        clicking random pictures from my phone, if you like you can check them out <a href="#"
+                        capturing random pictures on my smart phone, if you like you can check them out <a href="#"
                             class="yellow">here</a>.
                         <br>
                         If you have any cool projects or opportunities, <a href="#" class="yellow">get in touch</a>!
@@ -72,7 +76,7 @@
         </div>
     </div>
 
-    <div class="project">
+    <div class="Skil">
         
     </div>
 
