seprating css in different files

--- a/index.html
+++ b/index.html
@@ -208,7 +208,11 @@
     <div class="drawing-4"></div>
 
 <footer id="connect">
-
+    <p>Here is a joke to ruin you day!</p>
+    <div class="joke">
+        <h3 class="setup"></h3>
+        <h2 class="punchline pipe"></h2>
+    </div>
 </footer>
 
     <script src="assets/js/main.js"></script>
