adding final content

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <link rel="stylesheet" href="assets/css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Livvic|Nanum+Pen+Script|Sacramento|Satisfy&display=swap"
         rel="stylesheet">
-    <script src="https://kit.fontawesome.com/4b3d8f449d.js"></script>
+    <!-- <script src="https://kit.fontawesome.com/4b3d8f449d.js"></script> -->
         <!-- <link rel="stylesheet" href="bootstrap.min.css"> -->
     <title>RaJaT</title>
 </head>
 
 <body>
-    <!-- ========================================<  SECTION 1   >======================================== -->
+    <!-- ========================================<  LANDING AREA    >======================================== -->
     <div class="bg">
     </div>
     <div class="imgContainer">
@@ -33,7 +33,7 @@
     </nav>
 
     <div class="info">
-        <h2> Hi you found me! I'm just a random guy constantly staring at my glasses! <br> And apart from that I like
+        <h2> Hi you found me! I'm just a random guy constantly staring my glasses! <br> And apart from that I like
             doing web development and designing. </h2>
     </div>
 
@@ -46,7 +46,7 @@
     </div>
 
 
-    <!-- ========================================<  SECTION 2   >======================================== -->
+    <!-- ========================================<  ABOUT ME   >======================================== -->
 
     <div class="drawing-1"></div>
     
@@ -69,14 +69,16 @@
                         now! Though, I'm more into <span class="yellow">UI</span> and <span class="yellow">Front-end</span> related stuff. So I recently started designing.
                         <br>
                          Apart from coding, I like designing UI and UX for dummy apps or websites.
-                        I love watching movies too. My hobbies include sketching and listening to dubstep. I also like
+                        I love watching movies too. My hobbies include sketching and listening dubsteps. I also like
                         capturing random pictures on my smart phone, if you like you can check them out <a href="#"
                             class="yellow">here</a>.
                         <br>
-                        If you have any cool projects or opportunities, <a href="#" class="yellow">get in touch</a>!
+                        If you have any cool projects or opportunities, <a href="#connect" class="yellow">get in touch</a>!
                     </p> 
             </div>
     </div>
+
+    <!-- ========================================<  EDUCATION AND SKILLS   >======================================== -->
 
     <div class="drawing-2"></div>
 
@@ -85,23 +87,122 @@
     </div>
 
     <div class="edu-skills">
-        <div class="edu"></div>
-        <div class="skill"></div>
+        <div class="edu">
+            <div class="place">
+                <img src="/assets/images/school.jpeg" alt="my school :>">
+            </div>
+            <div class="details">
+                <h2>High School</h2><br>
+                <a href="http://www.kviffcogim.org" class="yellow">kendriya vidyalaya iffco</a>
+                <small class="disabled">-Gujrat-</small><br>
+                <small>science (2010-17)</small>
+            </div>
+            <div class="place">
+                <img src="/assets/images/college.jpeg" alt="my school :>">
+            </div>
+            <div class="details">
+                <h2>Graduation</h2><small class="disabled">b.tech</small><br>
+                <a href="http://www.msit.in" class="yellow">msit - ggsipu</a>
+                <small class="disabled">-Delhi-</small><br>
+                <small>information technology (2017-21)</small>
+            </div>
+        </div>
+
+        <!-- ========================================<  SKILLS CARDS   >======================================== -->
+
+        <div class="skill">
+            <div class="container">
+                <div class="card">
+                    <div class="box">
+                        <div class="percent">
+                            <svg>
+                                <circle cx="70" cy="70" r="70"></circle>
+                                <circle cx="70" cy="70" r="70"></circle>
+                            </svg>
+                            <div class="number">
+                                <h2>95<span>%</span></h2>
+                            </div>
+                        </div>
+                        <div class="text">adobe xd</div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <div class="percent">
+                            <svg>
+                                <circle cx="70" cy="70" r="70"></circle>
+                                <circle cx="70" cy="70" r="70"></circle>
+                            </svg>
+                            <div class="number">
+                                <h2>90<span>%</span></h2>
+                            </div>
+                        </div>
+                        <div class="text">html</div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <div class="percent">
+                            <svg>
+                                <circle cx="70" cy="70" r="70"></circle>
+                                <circle cx="70" cy="70" r="70"></circle>
+                            </svg>
+                            <div class="number">
+                                <h2>85<span>%</span></h2>
+                            </div>
+                        </div>
+                        <div class="text">css</div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <div class="percent">
+                            <svg>
+                                <circle cx="70" cy="70" r="70"></circle>
+                                <circle cx="70" cy="70" r="70"></circle>
+                            </svg>
+                            <div class="number">
+                                <h2>70<span>%</span></h2>
+                            </div>
+                        </div>
+                        <div class="text">JavaScript</div>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="box">
+                        <div class="percent">
+                            <svg>
+                                <circle cx="70" cy="70" r="70"></circle>
+                                <circle cx="70" cy="70" r="70"></circle>
+                            </svg>
+                            <div class="number">
+                                <h2>65<span>%</span></h2>
+                            </div>
+                        </div>
+                        <div class="text">node.js</div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
+
+    <!-- ========================================<  PROJECTS   >======================================== -->
 
     <div class="drawing-3"></div>
 
     <div class="projects-heading" id="projects">
         <h1>Projects</h1>
     </div>
+
+    <!-- ========================================<  PROJECT CARDS   >======================================== -->
     
     <div class="projects">
         <div class="card card-1">
             <div class="image">
                 <div class="img"></div>
                 <div class="blur"></div>
-                <div class="info">
-                    <h1>My Project</h1>
+                <div class="data">
+                    <h1>The OMDB App</h1>
                     <hr>
                     <a href="#" title="view code"><img src="/assets/svgs/github.svg" alt=""></a>
                     <a href="#" title="view live"><img src="/assets/svgs/live.svg" alt=""></a>
@@ -125,8 +226,7 @@
                 <hr>
                 <div class="about">
                     <h2>About: </h2>
-                    <p>Lorem ipsum eaque dolorum ducimus distinctio Vel minima dicta doloribus laudantium impedit
-                        dolorum.</p>
+                    <p>An web app that gives information of movies. The data is fetched from an API called OMDB.</p>
                     <h3 class="Completed">Completed: </h3>
                 </div>
             </div>
@@ -136,7 +236,7 @@
             <div class="image">
                 <div class="img"></div>
                 <div class="blur"></div>
-                <div class="info">
+                <div class="data">
                     <h1>Climate Quiz</h1>
                     <hr>
                     <a href="#" title="view code"><img src="/assets/svgs/github.svg" alt=""></a>
@@ -161,8 +261,7 @@
                 <hr>
                 <div class="about">
                     <h2>About: </h2>
-                    <p>Lorem ipsum eaque dolorum ducimus distinctio Vel minima dicta doloribus laudantium impedit
-                        dolorum.</p>
+                    <p>Its a trivia game for Google Assistant. Try it on your Google Assistant by invoking "Talk to the Climate Quiz"</p>
                     <h3 class="Completed">Completed: </h3>
                 </div>
             </div>
@@ -172,7 +271,7 @@
             <div class="image">
                 <div class="img"></div>
                 <div class="blur"></div>
-                <div class="info">
+                <div class="data">
                     <h1>DMRC Project</h1>
                     <hr>
                     <a href="#" title="view code"><img src="/assets/svgs/github.svg" alt=""></a>
@@ -197,22 +296,39 @@
                 <hr>
                 <div class="about">
                     <h2>About: </h2>
-                    <p>Lorem ipsum eaque dolorum ducimus distinctio Vel minima dicta doloribus laudantium impedit
-                        dolorum.</p>
+                    <p>Project I made while doing internship with DMRC. Its a simple Admin panel which displays the data of the user from an online database.</p>
                     <h3 class="Completed">Completed: </h3>
                 </div>
             </div>
         </div>
     </div>
 
+    <!-- ========================================<  FOOTER  >======================================== -->
+
     <div class="drawing-4"></div>
 
 <footer id="connect">
-    <p>Here is a joke to ruin you day!</p>
-    <div class="joke">
-        <h3 class="setup"></h3>
-        <h2 class="punchline pipe"></h2>
+    <div class="links">
+        <a href="https://github.com/Rajat1999">Github</a>
+        <a href="https://www.linkedin.com/in/rajat-gour/">LinkedIn</a>
+        <a href="https://www.instagram.com/rajatgour95/?hl=en">Instagram</a>
     </div>
+    <br>
+    <main>
+        <div class="left">
+            <h2>RAJ<span class="disabled">AT</span></h2>
+            <small class="yellow">rajatgour95@gmail.com</small>
+            <br><br>
+            <p>Here is a joke to ruin you day!</p>
+            <div class="joke">
+                <h3 class="setup"></h3>
+                <h2 class="punchline pipe"></h2>
+            </div>
+        </div>
+        <div class="right">
+            <img src="/assets/svgs/myAvtarSmiling.svg" alt="GoodBye!!" title="Thanks for visiting!!">
+        </div>
+    </main>
 </footer>
 
     <script src="assets/js/main.js"></script>
