final code addition

--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
 
 <body>
     <!-- ========================================<  LANDING AREA    >======================================== -->
-    <div class="bg">
-    </div>
+    <div class="bg"></div>
     <div class="imgContainer">
         <img src="assets/images/profile.jpg" alt="ME" title="Its RAJAT!">
     </div>
@@ -71,7 +70,7 @@
                         <br>
                          Apart from coding, I like designing UI and UX for dummy apps or websites.
                         I love watching movies too. My hobbies include sketching and listening dubsteps. I also like
-                        capturing random pictures on my smart phone, if you like you can check them out <a href="#"
+                        capturing random pictures on my smart phone, if you like you can check them out <a href="./assets/html/gallery.html"
                             class="yellow">here</a>.
                         <br>
                         If you have any cool projects or opportunities, <a href="#connect" class="yellow">get in touch</a>!
@@ -98,6 +97,8 @@
                 <small class="disabled">-Gujrat-</small><br>
                 <small>science (2010-17)</small>
             </div>
+            <hr class="yellow hr">
+
             <div class="place">
                 <img src="/assets/images/college.jpeg" alt="my school :>">
             </div>
@@ -205,8 +206,8 @@
                 <div class="data">
                     <h1>The OMDb App</h1>
                     
-                    <a href="#" title="view code"><img src="/assets/svgs/github.svg" alt=""></a>
-                    <a href="#" title="view live"><img src="/assets/svgs/live.svg" alt=""></a>
+                    <a href="https://github.com/Rajat1999/The-OMDb-App" title="view code"><img src="/assets/svgs/github.svg" alt=""></a>
+                    <a href="https://rajat-omdb.herokuapp.com/" title="view live"><img src="/assets/svgs/live.svg" alt=""></a>
                 </div>
             </div>
 
@@ -301,7 +302,7 @@
                 </div>
             </div>
         </div>
-        <h3 class="moreProjects">For more projects visit my <a href="#"><span class="pipe">Github</span></a></h3>
+        <h3 class="moreProjects">For more projects visit my <a href="https://github.com/Rajat1999"><span class="pipe">Github</span></a></h3>
     </div>
 
     <!-- ========================================<  FOOTER  >======================================== -->
