--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="HandheldFriendly" content="true">
     <meta charset="UTF-8">
+    <meta name="theme-color" content="#2C3A47" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <link rel='icon' href='assets/images/favicon.ico' type='image/x-icon' />
     <link rel="stylesheet" href="assets/css/main.css">
