--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     </nav>
 
     <div class="info">
-        <h2> Hi you found me! I'm just a random guy constantly staring my glasses! <br> And apart from that I like
-            doing web development and designing. </h2>
+        <h2> Hi you found me! I'm just a random guy constantly staring at my glasses! <br> And apart from that I like
+            doing Web Development and UI/UX Design. </h2>
     </div>
 
     <div class="arrow">
