--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </div>
 
     <div class="skillset">
-        <h3>WEB DEVELOPER <span class="pipe">|</span> WEB DESIGNER <span class="pipe">|</span> UI/UX DESIGNER</h3>
+        <h3>PRODUCT DESIGNER <span class="pipe">|</span> UX DESIGNER <span class="pipe">|</span> WEB DEVELOPER</h3>
     </div>
 
 
