--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                 </div>
             </div>
         </div>
-        <h3 class="moreProjects">For more projects visit my <a href="https://github.com/Rajat1999"><span class="pipe">Github</span></a></h3>
+        <h3 class="moreProjects">For more projects visit my <a href="https://www.behance.net/Rajat1999/"><span class="pipe">Behance profile</span></a></h3>
     </div>
 
     <!-- ========================================<  FOOTER  >======================================== -->
