--- a/index.html
+++ b/index.html
@@ -312,9 +312,11 @@
 
 <footer id="connect">
     <div class="links">
-        <a href="https://github.com/Rajat1999">Github</a>
+        <a href="https://www.behance.net/Rajat1999/">Behance</a>
         <a href="https://www.linkedin.com/in/rajat-gour/">LinkedIn</a>
         <a href="https://www.instagram.com/rajatgour95/?hl=en">Instagram</a>
+        <a href="https://github.com/Rajat1999">Github</a>
+        <a href="https://twitter.com/Rajat__1999">Twitter</a>
     </div>
     <br>
     <main>
