--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </div>
 
     <div class="skillset">
-        <h3>PRODUCT DESIGNER <span class="pipe">|</span>  <span class="pipe">|</span> WEB DEVELOPER</h3>
+        <h3>PRODUCT DESIGNER <span class="pipe">|</span>WEB DEVELOPER</h3>
     </div>
 
 
