--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
     </nav>
 
     <div class="info">
-        <h2> Hi you found me! I'm just a random guy constantly staring at my glasses! <br> And apart from that I like
-            doing Web Development and UI/UX Design. </h2>
+        <h2> Hi, you found me! It's just me staring at my glasses all the time! <br> On top of that, I'm passionate about solving problems through innovative design. </h2>
     </div>
 
     <div class="arrow">
