--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <!-- ========================================<  LANDING AREA    >======================================== -->
     <div class="bg"></div>
     <div class="imgContainer">
-        <img src="assets/images/profile.jpg" alt="ME" title="Its RAJAT!">
+        <img src="assets/images/profile.jpg" alt="MY PHOTO" title="Woo! I feel dizzy!">
     </div>
     <nav>
         <ul class="nav-list">
