--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
     <main>
         <div class="left">
             <h2>RAJ<span class="disabled">AT</span></h2>
-            <small class="yellow">rajatgour95@gmail.com</small>
+            <small class="yellow"><a href="mailto:rajatgour95@gmail.com">Email me!</a></small>
             <br><br>
             <p>Here is a joke to ruin you day!</p>
             <div class="joke">
