--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </nav>
 
     <div class="info">
-        <h2> Hi, you found me! It's just me staring at my glasses all the time! <br> On top of that, I'm passionate about solving problems through innovative design. </h2>
+        <h2> Hi, you found me! All I am is a random guy trying to see through my glasses! <br> Apart from that, I'm passionate about solving problems through innovative design. </h2>
     </div>
 
     <div class="arrow">
